--- a/main.html
+++ b/main.html
@@ -7,6 +7,77 @@
 </head>
 
 <body>
+	<div id="table1" class="table1">
+        <h4>HTML Assignment #3</h4>
+        <table class="middle">
+            <tr>
+                <td id="t11">left</td>
+                <td id="t12" class="center">center</td>
+                <td class="right">right</td>
+            </tr>
+            <tr>
+                <td>left</td>
+                <td class="center">center</td>
+                <td class="right">right</td>
+            </tr>
+            <tr>
+                <td>left</td>
+                <td class="center">center</td>
+                <td id="t13" class="right">right</td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="table2" class="table2">
+        <table class="middle">
+            <tr>
+                <td id="t21" colspan="6"></td>
+            </tr>
+            <tr>
+                <td rowspan="4"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td colspan="3" rowspan="2"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="6"></td>
+            </tr>
+        </table>
+    </div>
+    
+    <div id="table3" class="table3">
+        <table class="middle">
+            <tr>
+                <td class="green" colspan="3"></td>
+            </tr>
+            <tr>
+                <td id="t-image" style="text-align: center; padding: 0;"">
+                    <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td class="blue" colspan="3"></td>
+            </tr>
+        </table>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
