--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="table1" class="table1">
         <h4>HTML Assignment #3</h4>
-        <table class="middle">
+        <table id="table1" class="middle">
             <tr>
                 <td id="t11">left</td>
                 <td id="t12" class="center">center</td>
@@ -29,7 +29,7 @@
     </div>
 
     <div id="table2" class="table2">
-        <table class="middle">
+        <table id="table2" class="middle">
             <tr>
                 <td id="t21" colspan="6"></td>
             </tr>
@@ -63,7 +63,7 @@
         </table>
     </div>
     
-    <div id="table3" class="table3">
+    <div id="table-3" class="table3">
         <table class="middle">
             <tr>
                 <td class="green" colspan="3"></td>
